# quantum-tic-tac-toe

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  coverage.sh
app/: CMakeLists.txt  main.cpp
include/: board_collection.hpp  colapse_cycle.hpp  find_connection.hpp  graph_ttt.hpp  move_interpreter.hpp  player_enum.hpp  quantum-tictactoe.hpp  win_checker.hpp
lib/: CMakeLists.txt  board_collection.cpp  find_connection.cpp  graph_ttt.cpp  move_interpreter.cpp  quantum-tictactoe.cpp  win_checker.cpp
quantum-ttt-front/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
quantum-ttt-front/src/: index.html  styles.css
quantum-ttt-front/src/app/: api.service.spec.ts  api.service.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
quantum-ttt-front/src/app/board/: board.component.html  board.component.scss  board.component.ts
quantum-ttt-front/src/app/square/: square.component.ts
quantum-ttt-front/src/model/: square_obj.ts  test_obj.ts
tests/: CMakeLists.txt  test-quantum-tictactoe.cpp  testone.cpp
